# mopti

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docs.yml  main.yml  publish.yml
datasets/alkox/: index.html
datasets/baumgartner-aniline/: index.html
datasets/baumgartner-benzamide/: index.html
datasets/benzylation/: index.html
datasets/cake/: index.html
datasets/fullerenes/: index.html
datasets/hplc/: index.html
datasets/photodegradation/: index.html
docs/: index.md  install.md  overview.md  problem.md  ref-constraint.md  ref-metric.md  ref-model.md  ref-objective.md  ref-parameter.md  ref-problem.md  ref-problems.md  ref-sampling.md  ref-tools.md
examples/: bread.json  bread.mip  simple.json  simpleReducedProblem.json  test_scientific_notation.json
install/: index.html
opti/: __init__.py  constraint.py  metric.py  model.py  objective.py  parameter.py  problem.py
overview/: index.html
problem/: index.html
ref-constraint/: index.html
ref-metric/: index.html
ref-model/: index.html
ref-objective/: index.html
ref-parameter/: index.html
ref-problem/: index.html
ref-problems/: index.html
ref-sampling/: index.html
ref-tools/: index.html
search/: search_index.json
test/: test_bayesopt.py  test_constraint.py  test_docs.py  test_metric.py  test_modde.py  test_model.py  test_noisify.py  test_objective.py  test_parameter.py  test_problem.py  test_problems.py  test_reduce.py  test_reduce_problem.py  test_sampling.py  test_sanitize.py  test_subspace.py
(+61 files in other folders)
